update to contact and about pages

--- a/0x00-html_advanced/28-styleguide.html
+++ b/0x00-html_advanced/28-styleguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="rtl">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Styleguide - Techium</title>
         <meta name="description" content="Techium is a digital agency">
@@ -11,7 +11,10 @@
     <body>
         <header></header>
         <main>
-            <section><header><h2>Headings</h2></header>
+            <section>
+                <header>
+                    <h2>Headings</h2>
+                </header>
                 <h1>Heading level 1</h1>
                 <h2>Heading level 2</h2>
                 <h3>Heading level 3</h3>
@@ -27,10 +30,11 @@
                 <p>This is my subtitle</p>
                 <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
             </section>
-            <br>
-            <!--Lists-->
+            <!-- Lists -->
             <section>
-                <header><h2>Lists</h2></header>
+                <header>
+                    <h2>Lists</h2>
+                </header>
                 <div>
                     <h3>Unordered</h3>
                     <ul>
@@ -55,15 +59,14 @@
                     </dl>
                 </div>
             </section>
-            <br>
-            <!--Horizontal rule-->
+            <!-- Horizontal rule -->
             <section>
                 <header>
                     <h2>Horizontal rule</h2>
-                    <div>
-                        <hr>
-                    </div>
                 </header>
+                <div>
+                    <hr>
+                </div>
             </section>
         </main>
         <footer></footer>
