--- a/0x00-html_advanced/30-styleguide.html
+++ b/0x00-html_advanced/30-styleguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="en" dir="rtl">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Styleguide - Techium</title>
         <meta name="description" content="Techium is a digital agency">
@@ -11,7 +11,10 @@
     <body>
         <header></header>
         <main>
-            <section><header><h2>Headings</h2></header>
+            <section>
+                <header>
+                    <h2>Headings</h2>
+                </header>
                 <h1>Heading level 1</h1>
                 <h2>Heading level 2</h2>
                 <h3>Heading level 3</h3>
@@ -27,10 +30,11 @@
                 <p>This is my subtitle</p>
                 <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
             </section>
-            <br>
-            <!--Lists-->
+            <!-- Lists -->
             <section>
-                <header><h2>Lists</h2></header>
+                <header>
+                    <h2>Lists</h2>
+                </header>
                 <div>
                     <h3>Unordered</h3>
                     <ul>
@@ -55,28 +59,29 @@
                     </dl>
                 </div>
             </section>
-            <br>
-            <!--Horizontal rule-->
+            <!-- Horizontal rule -->
             <section>
                 <header>
                     <h2>Horizontal rule</h2>
-                    <div>
-                        <hr>
-                    </div>
                 </header>
+                <div>
+                    <hr>
+                </div>
             </section>
-            <br>
-            <!--Blockquotes-->
+            <!-- Blockquotes -->
             <section>
                 <header>
                     <h2>Blockquotes</h2>
                 </header>
-                <div><h3>Inline quote</h3>
-                <q>Stay hungry. Stay foolish.</q>
+                <div>
+                    <h3>Inline quote</h3>
+                    <q>Stay hungry. Stay foolish.</q>
                 </div>
                 <div>
                     <h3>Blockquote</h3>
-                    <blockquote><p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. <cite>Kanye West, Musician</cite></p></blockquote>
+                    <blockquote>
+                        <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. <cite>Kanye West, Musician</cite></p>
+                    </blockquote>
                 </div>
             </section>
         </main>
