--- a/0x00-html_advanced/33-styleguide.html
+++ b/0x00-html_advanced/33-styleguide.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
         <title>Styleguide - Techium</title>
         <meta name="description" content="Techium is a digital agency">
@@ -11,7 +11,10 @@
     <body>
         <header></header>
         <main>
-            <section><header><h2>Headings</h2></header>
+            <section>
+                <header>
+                    <h2>Headings</h2>
+                </header>
                 <h1>Heading level 1</h1>
                 <h2>Heading level 2</h2>
                 <h3>Heading level 3</h3>
@@ -27,10 +30,11 @@
                 <p>This is my subtitle</p>
                 <p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
             </section>
-            <br>
-            <!--Lists-->
+            <!-- Lists -->
             <section>
-                <header><h2>Lists</h2></header>
+                <header>
+                    <h2>Lists</h2>
+                </header>
                 <div>
                     <h3>Unordered</h3>
                     <ul>
@@ -55,36 +59,39 @@
                     </dl>
                 </div>
             </section>
-            <br>
-            <!--Horizontal rule-->
+            <!-- Horizontal rule -->
             <section>
                 <header>
                     <h2>Horizontal rule</h2>
-                    <div>
-                        <hr>
-                    </div>
                 </header>
+                <div>
+                    <hr>
+                </div>
             </section>
-            <br>
-            <!--Blockquotes-->
+            <!-- Blockquotes -->
             <section>
                 <header>
                     <h2>Blockquotes</h2>
                 </header>
-                <div><h3>Inline quote</h3>
-                <q>Stay hungry. Stay foolish.</q>
+                <div>
+                    <h3>Inline quote</h3>
+                    <q>Stay hungry. Stay foolish.</q>
                 </div>
                 <div>
                     <h3>Blockquote</h3>
-                    <blockquote><p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. <cite>Kanye West, Musician</cite></p></blockquote>
+                    <blockquote>
+                        <p>I will be the leader of a company that ends up being worth billions of dollars, because I got the answers. I understand culture. I am the nucleus. I think that’s a responsibility that I have, to push possibilities, to show people, this is the level that things could be at. <cite>Kanye West, Musician</cite></p>
+                    </blockquote>
                 </div>
             </section>
-            <br>
-            <!--Typography-->
+            <!-- Typography -->
             <section>
-                <header><h2>Typography</h2></header>
+                <header>
+                    <h2>Typography</h2>
+                </header>
                 <div>
-                    <address>320 Stewart Avenue, Unit 12 (line break) <br>New York City NY 10001
+                    <address>
+                        320 Stewart Avenue, Unit 12 (line break) <br> New York City NY 10001
                     </address>
                 </div>
                 <div>
@@ -96,38 +103,39 @@
                     </pre>
                 </div>
                 <div>
-                    <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies <mark>highlighted</mark> ut sed metus.</p>
+                    <p>Curabitur sit amet turpis cursus massa mollis <mark>highlighted</mark>. Duis finibus leo massa, eget dapibus erat finibus sed. Aenean condimentum sapien magna, eleifend <mark>highlighted</mark> mi consequat ut. Cras nec quam sed sapien ultricies  <mark>highlighted</mark> ut sed metus.</p>
                 </div>
             </section>
-            <br>
-            <!--Table-->
+            <!-- Table -->
             <section>
-                <header><h2>Table</h2></header>
+                <header>
+                    <h2>Table</h2>
+                </header>
                 <table>
                     <caption>Star Wars Trilogy Data</caption>
                     <thead>
                         <tr>
-                    <th span="col">Title</th>
-                    <th span="col">Director</th>
-                    <th span="col">Release Date</th>
+                            <th scope="col">Title</th>
+                            <th scope="col">Director</th>
+                            <th scope="col">Release Date</th>
                         </tr>
                     </thead>
                     <tbody>
-                    <tr> 
-                    <th span="row">Star Wars: Episode IV - A New Hope</th>
-                    <td>George Lucas</td>
-                    <td>May 25th, 1977</td>
-                    </tr>
-                    <tr> 
-                        <th span="row">Star Wars: Episode V - The Empire Strikes Back.</th>
-                        <td>Irvin Kershner</td>
-                        <td>May 21st, 1980</td>
-                    </tr>
-                    <tr>
-                        <th scope="row">Star Wars: Episode VI - Return of the Jedi.</th>
-                        <td>Richard Marquand</td>
-                        <td>May 25th, 1983</td>
-                    </tr>
+                        <tr>
+                            <th scope="row">Star Wars: Episode IV - A New Hope.</th>
+                            <td>George Lucas</td>
+                            <td>May 25th, 1977</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Star Wars: Episode V - The Empire Strikes Back.</th>
+                            <td>Irvin Kershner</td>
+                            <td>May 21st, 1980</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">Star Wars: Episode VI - Return of the Jedi.</th>
+                            <td>Richard Marquand</td>
+                            <td>May 25th, 1983</td>
+                        </tr>
                     </tbody>
                 </table>
             </section>
