--- a/0x00-html_advanced/22-index.html
+++ b/0x00-html_advanced/22-index.html
@@ -38,6 +38,7 @@
             <section>
                 <div>
                     <h2>We help you build your brand!</h2>
+                    <a href="#">Get started</a>
                 </div>
             </section>
             <br>
@@ -95,6 +96,7 @@
                         <h3>How we work</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                     </div>
+                    <a href="about.html">Learn more about us</a>
                 </div>
             </section>
             <br>
@@ -149,6 +151,7 @@
                     <div>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
                     </div>
+                    <a href="contact.html">Get in touch</a>
                 </div>
             </section>
         </main>
