--- a/0x00-html_advanced/35-index.html
+++ b/0x00-html_advanced/35-index.html
@@ -15,7 +15,7 @@
             <div>
                 <div>
                     <a href="/">
-                        <span><img src="./logo-black.png" style="width: 160px; height: 40px;"></span>
+                        <span><img src="./logo-black.png" alt="Techium logo" style="width: 160px; height: 40px;"></span>
                     </a>
                 </div>
                 <nav>
@@ -169,7 +169,7 @@
         <br>
         <!-- Footer -->
         <footer>
-            <img src="./logo-black.png" style="width: 160px; height: 40px;">
+            <img src="./logo-black.png" alt="Techium logo" style="width: 160px; height: 40px;">
             <address>
                 234 Washington Street <br> Urbana, Illinois
             </address>
