--- a/0x00-html_advanced/36-index.html
+++ b/0x00-html_advanced/36-index.html
@@ -71,15 +71,21 @@
                     </header>
                     <div>
                         <article>
-                            <div><img src="./images/pic-work-01.jpg" alt="empty"></div>
+                            <div>
+                                <img src="images/pic-work-01.jpg" alt="empty">
+                            </div>
                             <h3><a href="#">Interior Design</a></h3>
                         </article>
                         <article>
-                            <div><img src="./images/pic-work-02.jpg" alt="empty"></div>
+                            <div>
+                                <img src="images/pic-work-02.jpg" alt="empty">
+                            </div>
                             <h3><a href="#">Web Development</a></h3>
                         </article>
                         <article>
-                            <div><img src="./images/pic-work-03.jpg" alt="empty"></div>
+                            <div>
+                                <img src="images/pic-work-03.jpg" alt="empty">
+                            </div>
                             <h3><a href="#">Personal Brand</a></h3>
                         </article>
                     </div>                   
@@ -94,7 +100,7 @@
                         <p>Everything about us</p>
                     </header>
                     <div>
-                        <img src="./images/pic-about-us.jpg" alt="empty" height="447" width="460">
+                        <img src="images/pic-about-us.jpg" alt="empty" width="460" height="447">
                         <h3>Who are we</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum, omnis expedita! Eum, praesentium cumque accusantium rem, sit quaerat est nisi ratione, deserunt ducimus quidem iste dicta quibusdam atque maxime cum!</p>
                         <h3>Our culture</h3>
