--- a/0x00-html_advanced/styleguide.html
+++ b/0x00-html_advanced/styleguide.html
@@ -159,7 +159,7 @@
                     </details>
                 </div>
             </section>
-            <!--Video-->
+            <!-- Video -->
             <section>
                 <header>
                     <h2>Video</h2>
@@ -168,14 +168,23 @@
                     Sorry, your browser doesn't support HTML5 video
                 </video>
             </section>
-            <!--Iframe-->
+            <!-- Audio -->
+            <section>
+                <header>
+                    <h2>Audio</h2>
+                </header>
+                <audio src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" controls>
+                    Sorry, your browser doesn't support audio element
+                </audio>
+            </section>
+            <!-- Iframe -->
             <section>
                 <header>
                     <h2>Iframe</h2>
                 </header>
                 <div>
-                    <iframe src="https://www.youtube.com/embed/41N6bKO-NVI" frameborder="0" width="350px" height="200px" title="Holberton School">
-                        Holberton sally
+                    <iframe title="Holberton School" width="350px" height="200px" src="https://www.youtube.com/embed/41N6bKO-NVI" frameborder="0">
+                        Holberton Sally
                     </iframe>
                 </div>
             </section>
