--- a/0x00-html_advanced/38-styleguide.html
+++ b/0x00-html_advanced/38-styleguide.html
@@ -168,6 +168,15 @@
                     Sorry, your browser doesn't support HTML5 video
                 </video>
             </section>
+            <!--Audio-->
+            <section>
+                <header>
+                    <h2>Audio</h2>
+                </header>
+                <audio src="https://intranet-projects-files.s3.amazonaws.com/webstack/TroubleChapter8_64kb.mp3" controls>
+                    Sorry, your browser doesn't support audio element
+                </audio>
+            </section>
         </main>
         <footer></footer>
     </body>
