--- a/0x03-responsive_design/03-index.html
+++ b/0x03-responsive_design/03-index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='02-styles.css'>
+    <link rel='stylesheet' href='03-styles.css'>
   </head>
   <body>
-    <!– Header –>
+    <!-- Header -->
     <header class="header" data-section-theme="dark">
       <div class="container">
             <div class="header-container">
@@ -42,7 +42,7 @@
             <li class="nav-item">
               <a href="#contact" class="nav-link">Contact</a>
             </li>
-                        <li class="nav-item">
+              <li class="nav-item">
                 <form action="#" method="post" class="form-search">
                   <input type="search" name="q" id="search-input" placeholder="Search..." aria-label="Search through site content">
                   <button class="search-button">
@@ -58,11 +58,11 @@
           </ul>
         </nav>
       </div>
-            </div>
+    </div>
     </header>
-    <!– Main –>
+    <!-- Main -->
     <main>
-      <!– Hero section –>
+      <!-- Hero section -->
       <section class="section-hero hero-homepage" data-section-theme="dark">
         <div class="container">
           <div class="section-body">
@@ -73,7 +73,7 @@
           </div>
         </div>
       </section>
-      <!– Services section –>
+      <!-- Services section -->
       <section id="services" class="section section-services">
         <div class="container">
           <header class="section-header">
@@ -118,7 +118,7 @@
           </div>
         </div>
       </section>
-      <!– Works section –>
+      <!-- Works section -->
       <section id="works" class="section section-works" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
@@ -167,7 +167,7 @@
           </div>
         </div>
       </section>
-      <!– About Us section –>
+      <!-- About Us section -->
       <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
@@ -177,7 +177,14 @@
           <div class="section-body">
             <div class="row">
               <div class="col-1-2">
-                <img src="images/pic-about-01.jpg" alt="" width="460" height="460">
+                <img
+                  sizes="(max-width: 3000px) 40vw, 1200px"
+                  srcset="
+                    images/pic-about-01_ygw9wu_c_scale,w_300.jpg 300w,
+                    images/pic-about-01_ygw9wu_c_scale,w_951.jpg 951w,
+                    images/pic-about-01_ygw9wu_c_scale,w_1200.jpg 1200w"
+                  src="images/pic-about-01_ygw9wu_c_scale,w_1200.jpg"
+                  alt="">
               </div>
               <div class="col-1-2">
                 <h3>Who are we</h3>
@@ -194,7 +201,7 @@
           </div>
         </div>
       </section>
-      <!– Latest news section –>
+      <!-- Latest news section -->
       <section id="latest_news" class="section section-latest-news">
         <div class="container">
           <header class="section-header">
@@ -205,7 +212,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-01.jpg" alt="" width="305" height="305">
+                    <img
+                      sizes="(max-width: 3000px) 40vw, 1200px"
+                      srcset="
+                        images/pic-article-01_zxut6y_c_scale,w_300.jpg 300w,
+                        images/pic-article-01_zxut6y_c_scale,w_950.jpg 950w,
+                        images/pic-article-01_zxut6y_c_scale,w_1200.jpg 1200w"
+                      src="images/pic-article-01_zxut6y_c_scale,w_1200.jpg"
+                      alt="">
                   </div>
                   <p class="card-category">Career</p>
                   <h3><a href="#">Hoc loco tenere se Triarius non potuit.</a></h3>
@@ -216,7 +230,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-02.jpg" alt="" width="305" height="305">
+                    <img
+                      sizes="(max-width: 3000px) 40vw, 1200px"
+                      srcset="
+                        images/pic-article-02_w3bt1y_c_scale,w_300.jpg 300w,
+                        images/pic-article-02_w3bt1y_c_scale,w_931.jpg 931w,
+                        images/pic-article-02_w3bt1y_c_scale,w_1200.jpg 1200w"
+                      src="images/pic-article-02_w3bt1y_c_scale,w_1200.jpg"
+                      alt="">
                   </div>
                   <p class="card-category">Digital Life</p>
                   <h3><a href="#">Ut alios omittam, hunc appello, quem ille unum secutus est.</a></h3>
@@ -227,7 +248,14 @@
               <li class="col-1-3">
                 <article class="card-blog">
                   <div>
-                    <img src="images/pic-article-03.jpg" alt="" width="305" height="305">
+                    <img
+                      sizes="(max-width: 3000px) 40vw, 1200px"
+                      srcset="
+                        images/pic-article-03_fx7nm7_c_scale,w_300.jpg 300w,
+                        images/pic-article-03_fx7nm7_c_scale,w_911.jpg 911w,
+                        images/pic-article-03_fx7nm7_c_scale,w_1200.jpg 1200w"
+                      src="images/pic-article-03_fx7nm7_c_scale,w_1200.jpg"
+                      alt="">
                   </div>
                   <p class="card-category">Social</p>
                   <h3><a href="#">Bestiarum vero nullum iudicium puto.</a></h3>
@@ -239,7 +267,7 @@
           </div>
         </div>
       </section>
-      <!– Testimonials section –>
+      <!-- Testimonials section -->
       <section id="testimonial" class="section section-testimonial">
         <div class="container">
           <header class="section-header">
@@ -282,7 +310,7 @@
           </div>
         </div>
       </section>
-      <!– Contact section –>
+      <!-- Contact section -->
       <section id="contact" class="section section-contact">
         <div class="container">
           <header class="section-header">
@@ -298,7 +326,7 @@
         </div>
       </section>
     </main>
-    <!– Footer –>
+    <!-- Footer -->
     <footer class="footer" data-section-theme="dark">
       <div  class="container">
         <div class="row">
